since an admin posters is always constructor on newForum, provide it's id
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22218 91430c5f-d668-0410-9e7d-dd663366dcfd